# top_down_shooter

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: camera.rs  config.rs  gun.rs  lib.rs  main.rs  player.rs  resources.rs  state.rs  world.rs
