[package]
name = "top_down_shooter"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
bevy_pancam = "0.11.1"
rand = "*"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
